# watch-service

./: README.md  build.sbt
macosx-watch-service/src/main/java/edu/nccu/plsm/watchservice/: JNIException.java  JNILoader.java  LatencyWatchEventModifier.java  MacOSXWatchService.java  MacOSXWatchServiceImpl.java  MacOSXWatchable.java  NoDeferWatchEventModifier.java  SunNioFsAbstractPoller.java  SunNioFsAbstractWatchKey.java  SunNioFsAbstractWatchService.java  SunNioFsUnixException.java
macosx-watch-service/src/main/native/: CMakeLists.txt  edu_nccu_plsm_watchservice_MacOSXWatchServiceImpl_Poller.h  edu_nccu_plsm_watchservice_SunNioFsUnixException.h  macosx_watch_service.c  macosx_watch_service.h  util.c  util.h
macosx-watch-service/src/test/scala/edu/nccu/plsm/watchservice/: BasicWatchServiceSpec.scala  FileTreeModifierSpec.scala  LatencyModifierSpec.scala  TemporaryDirectoryProvider.scala  TestingBase.scala  WatchServiceFixture.scala
project/: Dependencies.scala  Javah.scala  Settings.scala  build.sbt
